--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.0",
-    "jest-expo": "^33.0.0"
+    "jest-expo": "^33.0.0",
+    "reactotron-react-native": "^3.6.4"
   },
   "private": true
 }
